# extras

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: askama.rs  html.rs  lib.rs  pager.rs  pagination.rs  tera.rs  yew.rs
