[package]
name = "elephantry-extras"
version = "0.7.1"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
description = "A collection of additional components for elephantry."
license = "MIT"
repository = "https://github.com/elephantry/extras/"

[dependencies.askama]
version = "0.12"
optional = true

[dependencies.elephantry]
version = "4.0"
optional = true

[dependencies.salvo]
version = "0.76"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.tera]
version = "1.5"
optional = true

[dependencies.yew]
version = "0.21"
optional = true

[features]
default = []
askama-pager = ["askama", "elephantry"]
salvo = ["dep:salvo", "serde"]
tera-pager = ["tera", "serde"]
yew-pager = ["yew"]
